--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@discordx/utilities": "^3.1.8",
     "discord.js": "^13.4.0",
     "discordx": "^9.1.5",
-    "reflect-metadata": "^0.1.13"
+    "dotenv": "^10.0.0",
+    "reflect-metadata": "^0.1.13",
+    "secretjs": "^0.17.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
