--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 BOT_TOKEN="xxx"
 REST_URL="https://api.scrt.network"
 STASHH_ADDRESS="secret170vzvknyh94v3cglk5mze8czeanua78vctdqre"
+SERVER_ID="894435040551915530"
+CHANNEL_ID="894435040551915533"
+INTERVAL=60000
 
 #uSCRT
 ALERT_PRICE=100000000
