--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "discord.js": "^13.4.0",
     "discordx": "^9.1.5",
     "dotenv": "^10.0.0",
+    "node-persist": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "secretjs": "^0.17.5"
   },
