add twitter announcements

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
 BOT_TOKEN="xxx"
 REST_URL="https://api.scrt.network"
 STASHH_ADDRESS="secret170vzvknyh94v3cglk5mze8czeanua78vctdqre"
-SERVER_ID="894435040551915530"
-CHANNEL_ID="894435040551915533"
-INTERVAL=60000
+SERVER_ID="123456"
+CHANNEL_ID="1234"
+INTERVAL=90000
+
+TWITTER_APP_KEY="xxx"
+TWITTER_APP_SECRET="xxx"
+TWITTER_ACCESS_KEY="xxx"
+TWITTER_ACCESS_SECRET="xxx"
 
 #uSCRT
-ALERT_PRICE=100000000
+ALERT_PRICE=99999999
