--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   "dependencies": {
     "@discordx/importer": "^1.1.2",
     "@discordx/utilities": "^3.1.8",
+    "axios": "^0.24.0",
     "discord.js": "^13.4.0",
     "discordx": "^9.1.5",
     "dotenv": "^10.0.0",
     "node-persist": "^3.1.0",
     "reflect-metadata": "^0.1.13",
-    "secretjs": "^0.17.5"
+    "secretjs": "^0.17.5",
+    "twitter-api-v2": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
