--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@discordx/utilities": "^3.1.8",
     "axios": "^0.24.0",
     "discord.js": "^13.4.0",
-    "discordx": "^9.1.5",
+    "discordx": "9.9.0",
     "dotenv": "^10.0.0",
     "node-persist": "^3.1.0",
     "reflect-metadata": "^0.1.13",
