--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "tsc",
     "dev": "node --loader ts-node/esm/transpile-only src/main.ts",
     "start": "nodemon --exec node --loader ts-node/esm/transpile-only src/main.ts",
-    "serve": "node build/client.js"
+    "serve": "node build/main.js"
   },
   "dependencies": {
     "@discordx/importer": "^1.1.2",
