update for multiple factories

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
-BOT_TOKEN="xxx"
-REST_URL="https://api.scrt.network"
-STASHH_ADDRESS="secret170vzvknyh94v3cglk5mze8czeanua78vctdqre"
-SERVER_ID="123456"
-CHANNEL_ID="1234"
+REST_URL="https://secret-4.api.trivium.network:1317"
 INTERVAL=90000
 
-TWITTER_APP_KEY="xxx"
-TWITTER_APP_SECRET="xxx"
-TWITTER_ACCESS_KEY="xxx"
-TWITTER_ACCESS_SECRET="xxx"
+DISCORD_ENABLED=true
+DISCORD_BOT_TOKEN="xxx"
+DISCORD_SERVER_ID="123456"
+DISCORD_CHANNEL_ID="1234"
+
+TWITTER_ENABLED=false
+TWITTER_APP_KEY=xx
+TWITTER_APP_SECRET=xx
+TWITTER_ACCESS_KEY=xx-xx
+TWITTER_ACCESS_SECRET=xx
